IpAccess - Interceptor 적용, 캐시 작업 중